[package]
name = "worldGenerator"
version = "0.1.0"
authors = ["Shane <mecham.shane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.7"
image = "0.23"
clap = "2.33"

[dependencies.rand]
version = "0.8"
features = ["std_rng"]